--- a/style/style.css
+++ b/style/style.css
@@ -1118,7 +1118,7 @@ footer .footnote .highlight {
     min-width: 500px;
   }
 }
-@media screen and (min-width: 960px) {
+@media screen and (min-width: 400px) {
   .waypoint {
     opacity: 0;
   }
@@ -1225,7 +1225,7 @@ footer .footnote .highlight {
 
   @keyframes animateUser{
     50%{
-      margin-left: 120px;
+      margin-left: 10px;
       margin-left: 20px;
       right: 10px;
       top: -90%;
@@ -1234,8 +1234,7 @@ footer .footnote .highlight {
 
   .imgbox #splash{
     position: absolute;
-    width: 30%;
-    height: 100%;
+    height: 105%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -1250,6 +1249,8 @@ footer .footnote .highlight {
     }
   }
 
+  
+
   section:nth-of-type(2) .bars-wrap {
     padding-top: 100px;
     margin: 0 0 0 0;
@@ -1259,7 +1260,7 @@ footer .footnote .highlight {
   }
   section:nth-of-type(2) .skills-wrapper .me {
     margin: 0;
-    height: 200%;
+    max-height: 70%;
   }
   section:nth-of-type(2) .bar {
     max-width: 90%;
@@ -1268,6 +1269,9 @@ footer .footnote .highlight {
     height: intial;
     margin: 0;
     padding: 0 10px;
+  }
+  section:nth-of-type(2) .label-wrap .label {
+    margin: 10px 10px 10px 10px;
   }
   section:nth-of-type(3) #gallery .mix .card {
     width: 400px;
@@ -1280,7 +1284,7 @@ footer .footnote .highlight {
   section:nth-of-type(4) .blog-wrap {
     margin: 0 0 50px 20px;
     opacity: 0;
-    width: 500px;
+    width: 330px;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -1289,3 +1293,5 @@ footer .footnote .highlight {
     width: 700px;
   }
 }
+
+
